PR29542, PowerPC gold internal error in get_output_view,

We were attempting to set a BSS style section contents.

	PR 29542
	* powerpc.cc (Output_data_plt_powerpc::do_write): Don't set .plt,
	.iplt or .lplt section contents when position independent.

(cherry picked from commit c21736aed1d4877e090df60362413669dbdc391d)